# NetworkMonitor

./: .gitignore  DEVELOPER.md  INSTALLATION.md  NetworkMonitor.spec  PRODUCTION_READINESS_PLAN.md  QUICK_START.md  README.md  build.py  createdir.js  install.bat  install.py  installer.nsi  pyproject.toml  requirements-build.txt  requirements.txt  run_app.py  setup.py
.github/workflows/: ci.yml  frontend.yml  pages.yml  version.yml
netmonitor/: __init__.py  cli.py  monitor.py  requirements.txt  server.py  windows.py
netmonitor/web/: package-lock.json  package.json  tailwind.config.mjs
netmonitor/web/pages/: index.js
networkmonitor/: __init__.py  __main__.py  cli.py  dependency_check.py  install.py  launcher.py  linux.py  macos.py  monitor.py  npcap_helper.py  requirements.txt  server.py  splash.py  windows.py
networkmonitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
networkmonitor/scripts/: networkmonitor_cli.py
networkmonitor/web/: next.config.mjs  package-lock.json  package.json
networkmonitor/web/components/: DependencyWarning.js  NetworkDashboard.js  theme.js
networkmonitor/web/pages/: _app.js  index.js
scripts/: generate_icon.py  install.ps1  install.sh
