[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "networkmonitor"
version = "0.1.0"
description = "Network monitoring and bandwidth control tool"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "flask>=2.0.1,<3.0.0",
    "flask-cors>=3.0.10,<4.0.0",
    "psutil>=5.8.0,<6.0.0",
    "scapy>=2.4.5,<3.0.0",
    "requests>=2.26.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "ifaddr>=0.1.7,<0.2.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "werkzeug>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
]

[tool.setuptools]
packages = ["networkmonitor"]

[project.scripts]
networkmonitor = "networkmonitor.cli:main"